--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@anfo/huiconsole-web-sdk",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "type": "module",
   "files": [
@@ -15,6 +15,7 @@
     }
   },
   "scripts": {
+    "dev": "rollup -c --watch",
     "build": "rollup -c"
   },
   "repository": {
@@ -41,6 +42,7 @@
     "rollup-plugin-polyfill-node": "^0.12.0"
   },
   "dependencies": {
-    "nanoid": "^4.0.1"
+    "nanoid": "^4.0.1",
+    "url": "^0.11.0"
   }
 }
